[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/ButtonFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_top = -0.949982
margin_right = 1022.0
margin_bottom = 598.05
color = Color( 0.933333, 0.615686, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -698.5
margin_right = 698.5
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.419608, 0.419608, 1 )
text = "SynVic"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSearchingGame" type="Label" parent="Background"]
margin_left = 677.0
margin_top = 24.0
margin_right = 1051.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.933333, 0.615686, 0.501961, 1 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -160.5
margin_right = 183.0
margin_bottom = 277.5
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Background/VBoxContainer"]
margin_right = 354.0
margin_bottom = 24.0
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchGameButton" type="Button" parent="Background/VBoxContainer"]
margin_top = 74.0
margin_right = 354.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 4 )
text = "Search Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharactersButton" type="Button" parent="Background/VBoxContainer"]
margin_top = 161.0
margin_right = 354.0
margin_bottom = 198.0
custom_fonts/font = ExtResource( 4 )
text = "Characters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioButton" type="Button" parent="Background/VBoxContainer"]
margin_top = 248.0
margin_right = 354.0
margin_bottom = 285.0
custom_fonts/font = ExtResource( 4 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 335.0
margin_right = 354.0
margin_bottom = 438.0
rect_min_size = Vector2( 300, 40 )
alignment = 1

[node name="LeftButton" type="Button" parent="Background/VBoxContainer/HBoxContainer"]
margin_right = 73.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 3 )
text = "←"

[node name="CharacterName" type="Label" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 77.0
margin_top = 34.0
margin_right = 277.0
margin_bottom = 69.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 3 )
text = "Engineer"
align = 1
valign = 1

[node name="RightButton" type="Button" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 281.0
margin_right = 354.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 3 )
text = "→"
[connection signal="pressed" from="Background/VBoxContainer/SearchGameButton" to="." method="_on_SearchGameButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/CharactersButton" to="." method="_on_CharactersButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/AudioButton" to="." method="_on_AudioButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
